--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
   "author": "Egor Kravchenko",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^4.0.0",
+    "dotenv": "^5.0.0",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.1.1",
-    "node-telegram-bot-api": "^0.30.0",
-    "npm": "^5.7.1"
+    "mongoose": "^5.1.2",
+    "node-telegram-bot-api": "^0.30.0"
   },
   "devDependencies": {
-    "nodemon": "^1.17.4"
+    "nodemon": "^1.17.5"
   }
 }
