--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,5 @@
 TOKEN=586000628:AAGwSBIs0nR32CbsbM2mv4ZpV_mBZXdFNzk
+NODE_ENV=development
 PROD_MONGODB=
 HEROKU_URL=https://magaz1.herokuapp.com
 PORT=
