--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
 TOKEN=586000628:AAGwSBIs0nR32CbsbM2mv4ZpV_mBZXdFNzk
-PROD_MONGODB=mongodb://<dbuser>:<dbpassword>@ds235711.mlab.com:35711/zina-start
+PROD_MONGODB=mongodb://login:password@ds235711.mlab.com:35711/zina-start
 HEROKU_URL=https://magazinzina-start.herokuapp.com/
 PORT=6033
