--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
 HEROKU_URL=https://magazinzina-start.herokuapp.com/
 PORT=6033
-PROD_MONGODB=mongodb://narntop:DISwedCamOstAt8@ds125341.mlab.com:25341/subscribes
+PROD_MONGODB=mongodb://narntop:DISwedCamOstAt8@ds235711.mlab.com:35711/zina-start
 TOKEN=586000628:AAGwSBIs0nR32CbsbM2mv4ZpV_mBZXdFNzk
