--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 HEROKU_URL=https://magazinzina-start.herokuapp.com/
 PORT=6033
-PROD_MONGODB=mongodb://narntop:DISwedCamOstAt8@ds235711.mlab.com:35711/zina-start
+PROD_MONGODB=mongodb://topadmin:IGgoquethvonkE7@ds259111.mlab.com:59111/narntop mongodb://narntop:DISwedCamOstAt8@ds235711.mlab.com:35711/zina-start
 TOKEN=621991964:AAEkl8AvbsU_4K0X-AxVbtYY4SWMRuVgM1k
