--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
-HEROKU_URL=https://magazinzina-start.herokuapp.com/
+HEROKU_URL=https://samaraflowers.herokuapp.com
 PORT=6033
 PROD_MONGODB=mongodb://admin:TubucsakJuckKu2@ds261521.mlab.com:61521/samara                   
 TOKEN=694866968:AAEVA9V1PXirdSryDTNkDeo4mtUjsWI0gj4
