--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HEROKU_URL=https://magazinzina-start.herokuapp.com/
+HEROKU_URL=https://samaraflowers.herokuapp.com
 PORT=6033
-PROD_MONGODB=mongodb://topadmin:IGgoquethvonkE7@ds259111.mlab.com:59111/narntop
-TOKEN=652255247:AAHSHCU1jXPK-mWVo3fiFhcetDrjyQiYQpc
+PROD_MONGODB=mongodb://name:12345678A@ds261521.mlab.com:61521/samara                  
+TOKEN=694866968:AAEVA9V1PXirdSryDTNkDeo4mtUjsWI0gj4
