--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HEROKU_URL=https://samaraflowstaff.herokuapp.com
+HEROKU_URL=https://samaraflowstaff1.herokuapp.com
 PORT=6033
 PROD_MONGODB=mongodb://name:12345678A@ds261521.mlab.com:61521/samara                  
 TOKEN= 123
