--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HEROKU_URL=https://samaraflowstaff1.herokuapp.com
+HEROKU_URL=https://magazinzina-start.herokuapp.com
 PORT=6033
-PROD_MONGODB=mongodb://test1:CIxTiedeyReshB6@ds111072.mlab.com:11072/3124fwqe
-TOKEN=452744799:AAHw2h5XXQPdtSrrOqjoswoxydpBz_VFz_M
+PROD_MONGODB=mongodb://mine:BlivOocktekEyf0@ds117362.mlab.com:17362/mmap1
+TOKEN=679140208:AAGflHpgc2B5k1xgaEzauz-gF8nq0WuqX5g
