--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HEROKU_URL=https://magazinzwwina-start.herokuapp.com
-PORT=6w033
-PROD_MONGODB=mongodb://mine:wBlivOocktekEyf0@ds117362.mlab.com:17362/mmap1
-TOKEN=67914020w8:AAGflHpgc2B5k1xgaEzauz-gF8nq0WuqX5g
+HEROKU_URL=https://magazinzina-start.herokuapp.com
+PORT=6033
+PROD_MONGODB=mongodb://mine:BlivOocktekEyf0@ds117362.mlab.com:17362/mmap1
+TOKEN=679140208:AAGflHpgc2B5k1xgaEzauz-gF8nq0WuqX5g
