--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HEROKU_URL=https://magazinzina-start.herokuapp.com
+HEROKU_URL=https://sdfsd21.herokuapp.com
 PORT=6033
-PROD_MONGODB=mongodb://mine:BlivOocktekEyf0@ds117362.mlab.com:17362/mmap1
-TOKEN=679140208:AAGflHpgc2B5k1xgaEzauz-gF8nq0WuqX5g
+PROD_MONGODB=mongodb://stopman:NofsArcOlgawny2@ds161520.mlab.com:61520/shandcloud
+TOKEN=634511952:AAEJTTJ8_pGY2ghUCoqrRVAcpsU-ufJXaPE
