--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HEROKU_URL=https://sdfsd21.herokuapp.com/
+HEROKU_URL=https://ts21.herokuapp.com/
 PORT=6033
-PROD_MONGODB=mongodb://stopman:NofsArcOlgawny2@ds161520.mlab.com:61520/shandcloud
-TOKEN=634511952:AAEJTTJ8_pGY2ghUCoqrRVAcpsU-ufJXaPE
+PROD_MONGODB=mongodb://suser:KeewElUvjinCeg7@ds219532.mlab.com:19532/h2fs
+TOKEN=652255247:AAHSHCU1jXPK-mWVo3fiFhcetDrjyQiYQpc
